[metadata]
license = MIT
license_file = LICENSE
Classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options.extras_requires]
testing =
    pytest>=7.1.3
    mypy>=0.971

[options.package_data]
IPYNBrenderer = py.typed


[flake8]
max-line-length = 160
exclude = __init__.
